2.1.1/_sources/gallery/user_interfaces/embedding_in_wx2_sgskip.rst.txt


.. _sphx_glr_gallery_user_interfaces_embedding_in_wx2_sgskip.py:


================
Embedding In Wx2
================

An example of how to use wx or wxagg in an application with the new
toolbar - comment out the setA_toolbar line for no toolbar



.. code-block:: python


    # Matplotlib requires wxPython 2.8+
    # set the wxPython version in lib\site-packages\wx.pth file
    # or if you have wxversion installed un-comment the lines below
    #import wxversion
    #wxversion.ensureMinimal('2.8')

    from numpy import arange, sin, pi

    import matplotlib

    # uncomment the following to use wx rather than wxagg
    #matplotlib.use('WX')
    #from matplotlib.backends.backend_wx import FigureCanvasWx as FigureCanvas

    # comment out the following to use wx rather than wxagg
    matplotlib.use('WXAgg')
    from matplotlib.backends.backend_wxagg import FigureCanvasWxAgg as FigureCanvas

    from matplotlib.backends.backend_wx import NavigationToolbar2Wx

    from matplotlib.figure import Figure

    import wx
    import wx.lib.mixins.inspection as WIT


    class CanvasFrame(wx.Frame):
        def __init__(self):
            wx.Frame.__init__(self, None, -1,
                              'CanvasFrame', size=(550, 350))

            self.figure = Figure()
            self.axes = self.figure.add_subplot(111)
            t = arange(0.0, 3.0, 0.01)
            s = sin(2 * pi * t)

            self.axes.plot(t, s)
            self.canvas = FigureCanvas(self, -1, self.figure)

            self.sizer = wx.BoxSizer(wx.VERTICAL)
            self.sizer.Add(self.canvas, 1, wx.LEFT | wx.TOP | wx.EXPAND)
            self.SetSizer(self.sizer)
            self.Fit()

            self.add_toolbar()  # comment this out for no toolbar

        def add_toolbar(self):
            self.toolbar = NavigationToolbar2Wx(self.canvas)
            self.toolbar.Realize()
            # By adding toolbar in sizer, we are able to put it at the bottom
            # of the frame - so appearance is closer to GTK version.
            self.sizer.Add(self.toolbar, 0, wx.LEFT | wx.EXPAND)
            # update the axes menu on the toolbar
            self.toolbar.update()


    # alternatively you could use
    #class App(wx.App):
    class App(WIT.InspectableApp):
        def OnInit(self):
            'Create the main window and insert the custom frame'
            self.Init()
            frame = CanvasFrame()
            frame.Show(True)

            return True

    app = App(0)
    app.MainLoop()

**Total running time of the script:** ( 0 minutes  0.000 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: embedding_in_wx2_sgskip.py <embedding_in_wx2_sgskip.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: embedding_in_wx2_sgskip.ipynb <embedding_in_wx2_sgskip.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
